load("@bazel_skylib//lib:selects.bzl", "selects")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "entt",
    strip_include_prefix = "src",
    hdrs = glob(["src/**/*.h", "src/**/*.hpp"]),
    copts = selects.with_or({
        ("//conditions:default", "@rules_cc//cc/compiler:clang", "@rules_cc//cc/compiler:gcc", "@rules_cc//cc/compiler:mingw-gcc"): [
            "-std=c++17",
        ],
        ("@rules_cc//cc/compiler:msvc-cl", "@rules_cc//cc/compiler:clang-cl"): [
            "/std:c++17",
            "/permissive-",
        ],
    }),
)
